--- a/index.css
+++ b/index.css
@@ -26,9 +26,13 @@ h2 {
 
 h3 {
   color: #bc6c25;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   text-shadow: 0 0 1px black;
   letter-spacing: 1px;
+}
+
+.section-two h3 {
+  font-size: 1.4rem;
 }
 
 h4 {
